# LambdaDistributions

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  verify_alternating_group.py  verify_cyclic_sigma_mgf_complex_1d.py  verify_cyclic_sigma_mgf_real_2d.py  verify_generalised_symmetric.py
lambda_distributions/: __init__.py  core.py  distribution.py  formulas.py  groups.py  notebook_support.py  sampling.py  verification.py
lambda_distributions/dists/: __init__.py  test_verification.py  verification.py
marimo_notebooks/: README.md  __init__.py  a5_representations.py  affine_groups.py  affine_wreath_products.py  alternating.py  alternating_exact.py  association_schemes.py  barnes_wall.py  binary_polyhedral.py  braid_cyclic_scalar.py  braid_ising_clifford.py  braid_s3_permutation.py  braid_tqft.py  central_extensions.py  classical_compact.py  clifford_groups.py  co0_leech.py  code_monomial.py  cyclic.py  cyclic_complex_1d.py  cyclic_monomial_walkthrough.py  cyclic_real_2d.py  cyclic_weight_distribution.py  dicyclic.py  dicyclic_exact.py  dihedral.py  extraspecial_groups.py  extraspecial_real_pauli.py  finite_abelian.py  finite_linear_groups.py  finite_polar_groups.py  formula_checks.py  g_r_p_n.py  generalised_symmetric.py  generalized_dihedral.py  generalized_molien_extensions.py  grassmann_scheme.py  h3_reflection.py  h3_reflection_verification.py  (+51 more)
proved_matrix_groups/: README.md  RESULTS_SUMMARY.md  all_new_matrix_groups_formulas.tex  all_new_matrix_groups_proofs_integrated.tex  verification_manifest.json  verification_results.xml
(+226 files in other folders)
