[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "lambda-distributions"
version = "0.1.0"
description = "Experiments and formula checks for Lambda-distributions of finite matrix groups"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
]

[dependency-groups]
dev = [
  "marimo>=0.23.8",
  "pytest>=8",
]

[tool.setuptools.packages.find]
include = ["lambda_distributions*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
